<!--
  ~ Copyright (c) 2024 Bear Giles <bgiles@coyotesong.com>.
  ~ All Rights Reserved.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.coyotesong.examples.spring-boot</groupId>
    <artifactId>databases</artifactId>
    <version>0.9</version>
    <packaging>pom</packaging>

    <name>Spring Boot 3.x and Databases - Parent POM</name>
    <description>
        This project demonstrates how to use Spring Boot 3.x with
        database test containers.

        It also includes flyway (schema management) and jOOQ (database
        integration).
    </description>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>coyotesong (Bear Giles)</name>
        <url>https://github.com/coyotesong</url>
    </organization>

    <developers>
        <developer>
            <id>beargiles</id>
            <name>Bear Giles</name>
            <email>bgiles@coyotesong.com</email>
            <url>https://github.com/coyotesong</url>
            <organization>coyotesong</organization>
            <organizationUrl>https://github.com/coyotesong</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>America/Denver</timezone>
        </developer>
    </developers>

    <!-- <issueManagement></issueManagement> -->

    <!-- <distributionManagement></distributionManagement> -->

    <modules>
        <module>common</module>
        <module>jooq</module>
        <module>shared-tests</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- it looks like we can't inherit either <properties> or <pluginManagement> from parent pom. :-( -->
        <!-- we also can't load the values using the 'properties-maven-plugin' plugin either. -->

        <!-- maven dependencies -->
        <maven.version>3.9.0</maven.version> <!-- 3.6.3 on Ubuntu 22.04? -->
        <maven-artifact-transfer.version>0.13.1</maven-artifact-transfer.version>
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <maven-dependency-tree-plugin.version>3.6.1</maven-dependency-tree-plugin.version>
        <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
        <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
        <maven-reporting-api.version>3.1.1</maven-reporting-api.version>
        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>

        <build-helper-maven-plugin.version>3.4.0</build-helper-maven-plugin.version>
        <error-prone.version>2.3.4</error-prone.version>

        <!--<maven-site-plugin.version>4.0.0-M11</maven-site-plugin.version> -->
        <maven-site-plugin.version>3.12.1</maven-site-plugin.version>
        <doxia.version>1.11.1</doxia.version>

        <!-- these are tied to the spring boot version -->
        <spring-boot.version>3.3.1</spring-boot.version>
    	<flyway.version>10.15.2</flyway.version>
        <jooq.version>3.19.10</jooq.version>
        <postgresql-jdbc.version>42.7.3</postgresql-jdbc.version>
        <testcontainers.version>1.19.8</testcontainers.version>

        <jetbrains.version>19.0.0</jetbrains.version>
        <hamcrest.version>2.2</hamcrest.version>

        <postgresql-docker.version>15.7-alpine</postgresql-docker.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.coyotesong.examples.spring-boot</groupId>
                <artifactId>release-profile</artifactId>
                <version>0.9</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- this 'import' dependency allows us to inherit all -->
            <!-- of the package dependencies in spring boot without -->
            <!-- actually limiting us to using it as the parent pom -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <!-- for transactions -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-jdbc</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-jooq</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jetbrains</groupId>
                <artifactId>annotations</artifactId>
                <version>${jetbrains.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.13.0</version>
            </dependency>

            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-database-postgresql</artifactId>
                <version>${flyway.version}</version>
            </dependency>
            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${postgresql-jdbc.version}</version>
            </dependency>

            <!-- this 'import' dependency allows us to inherit all -->
            <!-- of the package dependencies in spring boot without -->
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-testcontainers</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <compilerId>javac</compilerId>
                        <fork>true</fork>
                        <meminitial>256m</meminitial>
                        <maxmem>1024m</maxmem>
                        <encoding>UTF-8</encoding>
                        <compilerArgs>
                            <arg>-J--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                            <arg>-XDcompilePolicy=simple</arg>
                            <!-- disabling error-prone plugin for now as lots of syntactical changes needed -->
                            <!--
                            <arg>-Xplugin:ErrorProne
                                 -Xep:AssertEqualsArgumentOrderChecker:ERROR
                                 -Xep:DefaultCharset:ERROR
                                 -Xep:EqualsIncompatibleType:ERROR
                                 -Xep:ImmutableEnumChecker:ERROR
                                 -Xep:MissingOverride:ERROR
                                 -Xep:RemoveUnusedImports:ERROR
                                 -Xep:StreamResourceLeak:ERROR
                                 -Xep:ThreadLocalUsage:ERROR
                                 -Xep:UnusedException:ERROR
                                 -Xep:UnnecessaryParentheses:ERROR
                                 -XepDisableWarningsInGeneratedCode
                                 -XepExcludedPaths:.*/generated-sources/.*</arg>
                            -->
                            <arg>-Xlint:all</arg>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>${error-prone.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>build-helper-maven-plugin</artifactId>
                    <version>${build-helper-maven-plugin.version}</version>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${maven-jar-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>

            <!-- see quarkus example for more details... -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>**/ITest*</exclude>
                        <exclude>**/TestContainer*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <phase>test</phase>
                    </execution>
                </executions>
            </plugin>

            <!-- see quarkus example for more details... -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/ITest*</include>
                        <include>**/TestContainer*</include>
                    </includes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
